@@ -1,3 +1,8 @@
+2011-08-23  Jason Merrill  <jason@redhat.com>
+
+	PR c++/50024
+	* g++.dg/cpp0x/constexpr-initlist5.C: New.
+
 2011-08-23  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/46862
